# trmnl-bellwether

./: .deploy.sample  .editorconfig  .gitattributes  .gitignore  .mise.toml  .ports.sample  .template-sync.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.ps1  clippy.toml  config.example.toml  llms.txt  package.json  playwright.config.ts  tsconfig.json
.claude/: .gitignore  settings.json  skills.json
.claude/commands/: check.md  commit.md  implement.md  retrospect.md  template-improve.md  template-sync.md  test.md  todo.md  validate.md
.claude/hooks/: stop-check.sh
.claude/skills/architect/: SKILL.md
.claude/skills/trmnl-expert/: SKILL.md
.claude/skills/web-dev/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/bellwether/: Cargo.toml
crates/bellwether-web/: Cargo.toml
crates/bellwether-web/src/: main.rs
crates/bellwether-web/src/api/: mod.rs
crates/bellwether-web/src/api/trmnl/: handlers.rs  mod.rs  tests.rs
crates/bellwether/assets/: layout.toml
crates/bellwether/assets/icons/weather-icons/: LICENSE  README.md
crates/bellwether/src/: lib.rs  licenses.rs  telemetry.rs
crates/bellwether/src/clients/: http_util.rs  mod.rs
crates/bellwether/src/clients/open_meteo/: mod.rs  tests.rs
crates/bellwether/src/clients/windy/: mod.rs  tests.rs
crates/bellwether/src/config/: mod.rs  render.rs  trmnl.rs  weather.rs  windy.rs
crates/bellwether/src/dashboard/: astro.rs  classify.rs  feels_like.rs  icons.rs  mod.rs  model.rs  svg.rs
crates/bellwether/src/dashboard/classify/: compass.rs  mod.rs  weather.rs
crates/bellwether/src/dashboard/layout/: mod.rs  tests.rs
crates/bellwether/src/dashboard/model/: build.rs  mod.rs  tests.rs  types.rs
crates/bellwether/src/dashboard/svg/: mod.rs  tests.rs
crates/bellwether/src/publish/: mod.rs  tests.rs
crates/bellwether/src/render/: bmp.rs  dither.rs  mod.rs  tests.rs
crates/bellwether/src/render/fonts/: README.md
crates/bellwether/src/weather/: error.rs  mod.rs  tests.rs
crates/bellwether/test-data/: config-byos.toml  config-webhook.toml  windy_key.txt
crates/bellwether/tests/: integration_test.rs
crates/rustbase/: Cargo.toml
crates/rustbase-web/: Cargo.toml
crates/rustbase-web/src/: main.rs
crates/rustbase-web/src/api/: mod.rs
crates/rustbase/tests/: integration_test.rs
deploy/: README.md  bellwether-web.service
docs/: todo.md
docs/ai-agents/: guidelines.md
docs/developer/: DIARY.md  HANDOFF.md  RUNBOOK.md  artisan-log.md  artisan-resolved.md  redteam-log.md  redteam-resolved.md  spike.md  template-feedback.md  weather-provider-migration.md
e2e/tests/: smoke.spec.ts
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
frontend/src/: App.svelte  App.test.js  app.css  main.ts
scripts/: clippy.sh  e2e.sh  fmt.sh  kill-servers.sh  test.sh  validate.sh
xtask/: Cargo.toml
xtask/src/: check.rs  clean_cache.rs  clippy_cmd.rs  coverage.rs  deploy.rs  deploy_config.rs  deploy_remote.rs  deploy_setup.rs  dupes.rs  fmt_cmd.rs  frontend_check.rs  helpers.rs  main.rs  preview.rs  test_cmd.rs  validate.rs
