[workspace]
members = ["crates/rustbase", "crates/rustbase-web", "xtask"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"
# Allowed pedantic lints (adjust per project):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[profile.test]
opt-level = 1
