[package]
name = "bellwether-web"
version = "0.1.0"
edition = "2024"
description = "Web server and TRMNL render endpoint for bellwether"
license = "MIT"
repository = "https://github.com/breki/trmnl-bellwether"
readme = "../../README.md"
default-run = "bellwether-web"
keywords = ["trmnl", "e-ink", "home-assistant", "weather", "web"]
categories = ["command-line-utilities", "web-programming"]

[lints]
workspace = true

[[bin]]
name = "bellwether-web"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bellwether = { path = "../bellwether" }
axum = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = "0.5"
