[package]
name = "bellwether"
version = "0.2.0"
edition = "2024"
description = "TRMNL e-ink dashboard server core library"
license = "MIT"
repository = "https://github.com/breki/trmnl-bellwether"
readme = "../../README.md"
default-run = "bellwether"
keywords = ["trmnl", "e-ink", "home-assistant", "weather"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "bellwether"
path = "src/bin/bellwether/main.rs"

[dependencies]
# Library code uses thiserror for typed errors.
# anyhow is for the binary entry point only --
# do NOT use anyhow::Result in lib.rs public API.
anyhow = "1"
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
