[package]
name = "bellwether"
version = "0.5.0"
edition = "2024"
description = "TRMNL e-ink dashboard server core library"
license = "MIT"
repository = "https://github.com/breki/trmnl-bellwether"
readme = "../../README.md"
default-run = "bellwether"
keywords = ["trmnl", "e-ink", "home-assistant", "weather"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "bellwether"
path = "src/bin/bellwether/main.rs"

[dependencies]
# Library code uses thiserror for typed errors.
# anyhow is for the binary entry point only --
# do NOT use anyhow::Result in lib.rs public API.
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# NOTE: serde_json is only used for the Windy JSON wire
# format (via reqwest's `json` feature); the config
# format is strictly TOML. `gzip` halves typical Windy
# response sizes over cellular.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# resvg pulls tiny-skia (raster ops), usvg (SVG parser),
# and fontdb (font DB for text rendering). We enable
# `text` so SVGs can contain `<text>` elements. We skip
# `system-fonts` / `memmap-fonts` on purpose — layouts
# bake their fonts in via `Renderer::load_font_data` for
# reproducible output and to avoid dragging fontconfig
# onto the Pi. `raster-images` (PNG/JPEG/WebP embedded in
# SVG) is also off; our dashboards are pure vector.
resvg = { version = "0.45", default-features = false, features = ["text"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[features]
# Enables tests that hit the real Windy API. Off by
# default; run with `cargo test --features live-tests
# -- --ignored live_windy` and the required env vars
# (BELLWETHER_WINDY_KEY).
live-tests = []
