[package]
name = "rustbase"
version = "0.4.0"
edition = "2024"
# TODO: update these fields for your project
description = "A Rust project"
license = "MIT"
repository = "https://github.com/breki/rustbase"
readme = "../../README.md"
default-run = "rustbase"
keywords = ["cli"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "rustbase"
path = "src/bin/rustbase/main.rs"

[dependencies]
# Library code uses thiserror for typed errors.
# anyhow is for the binary entry point only --
# do NOT use anyhow::Result in lib.rs public API.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
